--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,13 @@
 HTTP_PORT=5400
 HTTPS_PORT=8080
-DATABASE_URL=//localhost:27017/ncpa
-TEST_DATABASE_URL=//localhost:27017/ncpa
-APP_NAME="NCPA"
+DATABASE_URL=//localhost:27017/vehicleInspect
+TEST_DATABASE_URL=//localhost:27017/vehicleInspect
+SENDGRID_API_KEY=SG.4yfqWKnlToafvo7D4oI84A.4rSKsOFF9ojy2p3DigPPrfHUPYoy8oTIAVnj8qDo_x4
+APP_NAME="AUTOASSURE"
 SERVER_PATH=http://localhost:5400/
 PRIVATE_KEY_PATH=/etc/letsencrypt/live/greeting.lk/privkey.pem
 CERT_KEY_PATH=/etc/letsencrypt/live/greeting.lk/fullchain.pem
 CERT_AUTH_PATH=/etc/letsencrypt/live/greeting.lk/intermediate.pem
+EMIAL="ksun1299.lk@gmail.com"
+EMAIL_PASSWORD="najs vccm beij vorz"
 TZ=Asia/Colombo
