--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "make-dir": "^3.1.0",
     "mongoose": "^5.3.9",
     "nodemailer": "^4.7.0",
+    "nodemon": "^3.1.4",
+    "pngjs": "^7.0.0",
     "request": "^2.88.0",
     "sharp": "^0.33.4",
     "shortid": "^2.2.15",
