add payment model and integrate with stripe.

--- a/.env.example
+++ b/.env.example
@@ -8,5 +8,6 @@ PRIVATE_KEY_PATH=/etc/letsencrypt/live/greeting.lk/privkey.pem
 CERT_KEY_PATH=/etc/letsencrypt/live/greeting.lk/fullchain.pem
 CERT_AUTH_PATH=/etc/letsencrypt/live/greeting.lk/intermediate.pem
 EMIAL="email"
+STRIPE_SECRET_KEY=""
 EMAIL_PASSWORD="password"
 TZ=Asia/Colombo
