--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "request": "^2.88.0",
     "sharp": "^0.33.4",
     "shortid": "^2.2.15",
+    "stripe": "^16.9.0",
     "uniqid": "^5.2.0",
     "uuid": "^8.3.0"
   },
