--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nodemailer": "^4.7.0",
     "nodemon": "^3.1.4",
     "pngjs": "^7.0.0",
+    "puppeteer": "^23.2.2",
     "request": "^2.88.0",
     "sharp": "^0.33.4",
     "shortid": "^2.2.15",
