--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nodemon": "^3.1.4",
     "pngjs": "^7.0.0",
     "puppeteer": "^23.2.2",
+    "qrcode": "^1.5.4",
     "request": "^2.88.0",
     "sharp": "^0.33.4",
     "shortid": "^2.2.15",
