--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^8.3.0",
     "make-dir": "^3.1.0",
     "mongoose": "^5.3.9",
+    "node-cron": "^3.0.3",
     "nodemailer": "^4.7.0",
     "nodemon": "^3.1.4",
     "pngjs": "^7.0.0",
